Fix login/signup white bar, add price range filter, calendar day view on mobile

--- a/Project/book_it/app/(pages)/login/page.module.scss
+++ b/Project/book_it/app/(pages)/login/page.module.scss
@@ -1,7 +1,7 @@
 .page {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    min-height: calc(100vh - 80px);
+    min-height: 100vh;
 }
 
 .left {
